--- a/NexGenRedAlert/NexGenRedAlert/Views/SvpFormTabbedPage.xaml
+++ b/NexGenRedAlert/NexGenRedAlert/Views/SvpFormTabbedPage.xaml
@@ -8,7 +8,7 @@
             <ScrollView >
                 <StackLayout Margin="20,20,20,0" Spacing="10" Orientation="Vertical" VerticalOptions="FillAndExpand">
                     <Label x:Name="VillageCodeLabel" Text="VillageCode:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                    <Entry x:Name="VillageCodeEntry" Placeholder="Village Code" Keyboard="Numeric" Unfocused="OnUnfocusedVillageCodeEntryAsync" Text="{Binding Svp.VillageCode, Mode=TwoWay}" />
+                    <Entry x:Name="VillageCodeEntry" Placeholder="Village Code" Keyboard="Numeric" Unfocused="OnUnfocusedVillageCodeEntryAsync" Text="{Binding Svp.VillageCode, Mode=OneWayToSource}" />
                     <Frame x:Name="VillageProfileFrame"  IsVisible="False" Margin="0,10,0,0" >
                         <Label x:Name="VillageProfileLabel" Text="" TextColor="{StaticResource Black}" FontSize="15" />
                     </Frame>
@@ -17,56 +17,50 @@
                     <DatePicker x:Name="SvpDatePicker" Format="D" TextColor="Black" Date="{Binding Svp.SvpDate, Mode=OneWayToSource}" />
 
                     <Label x:Name="TravelHoursLabel" Text="Travel time to Village:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                    <Entry x:Name="TravelHoursEntry" Placeholder="Hours" Keyboard="Numeric" Text="{Binding Svp.TravelHours, Mode=TwoWay}" />
+                    <Entry x:Name="TravelHoursEntry" Placeholder="Hours" Keyboard="Numeric" Text="{Binding Svp.TravelHours, Mode=OneWayToSource}" />
 
                     <Label x:Name="TotalCampaignHoursLabel" Text="Total Campaigning Hours:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                    <Entry x:Name="TotalCampaignHoursEntry" Placeholder="Hours" Keyboard="Numeric" Text="{Binding Svp.TotalCampaignHours, Mode=TwoWay}" />
-
-                    <Label x:Name="MajorEmploymentLabel" Text="Major Source of Income:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                    <Entry x:Name="MajorEmploymentEntry" Placeholder="Major Source of Income" Text="{Binding PreSvp.MajorSourceOfIncome, Mode=TwoWay}" />
+                    <Entry x:Name="TotalCampaignHoursEntry" Placeholder="Hours" Keyboard="Numeric" Text="{Binding Svp.TotalCampaignHours, Mode=OneWayToSource}" />
 
                     <Label x:Name="FieldWorkerNamesLabel" Text="Names of Field Workers" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                    <Editor x:Name="FieldWorkerNamesEntry" Text="{Binding Svp.FieldWorkerNames, Mode=TwoWay}" />
+                    <Editor x:Name="FieldWorkerNamesEntry" Text="{Binding Svp.FieldWorkerNames, Mode=OneWayToSource}" />
 
                     <Label x:Name="ORAVisitedLabel" Text="Did ORA Visit (Yes/No) ?:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                    <Picker x:Name="ORAVisitedEntry" Title="Did ORA Visit ?"  SelectedItem="{Binding Svp.ORAVisited, Mode=TwoWay}" />
+                    <Picker x:Name="ORAVisitedEntry" Title="Did ORA Visit ?"  SelectedItem="{Binding Svp.ORAVisited, Mode=OneWayToSource}" />
 
                     <Label x:Name="ConfirmedChildAbuseCountLabel" Text="Confirmed Child Abuse Count:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                    <Entry x:Name="ConfirmedChildAbuseCountEntry" Placeholder="Confirmed Count" Keyboard="Numeric" Text="{Binding Svp.ConfirmedChildAbuseCount, Mode=TwoWay}" />
+                    <Entry x:Name="ConfirmedChildAbuseCountEntry" Placeholder="Confirmed Count" Keyboard="Numeric" Text="{Binding Svp.ConfirmedChildAbuseCount, Mode=OneWayToSource}" />
 
                     <Label x:Name="ConfirmedDomesticViolenceCasesCountLabel" Text="Confirmed Domestic Violence Cases Count:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                    <Entry x:Name="ConfirmedDomesticViolenceCasesCountEntry" Placeholder="Confirmed Count" Keyboard="Numeric" Text="{Binding Svp.ConfirmedDomesticViolenceCasesCount, Mode=TwoWay}" />
+                    <Entry x:Name="ConfirmedDomesticViolenceCasesCountEntry" Placeholder="Confirmed Count" Keyboard="Numeric" Text="{Binding Svp.ConfirmedDomesticViolenceCasesCount, Mode=OneWayToSource}" />
 
                     <Label x:Name="ConfirmedTraffickingCasesCountLabel" Text="Confirmed Trafficking Cases Count:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                    <Entry x:Name="ConfirmedTraffickingCasesCountEntry" Placeholder="Confirmed Count" Keyboard="Numeric" Text="{Binding Svp.ConfirmedTraffickingCasesCount, Mode=TwoWay}" />
+                    <Entry x:Name="ConfirmedTraffickingCasesCountEntry" Placeholder="Confirmed Count" Keyboard="Numeric" Text="{Binding Svp.ConfirmedTraffickingCasesCount, Mode=OneWayToSource}" />
 
                     <Label x:Name="ConfirmedMissingCasesCountLabel" Text="Confirmed Missing Cases Count:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                    <Entry x:Name="ConfirmedMissingCasesCountEntry" Placeholder="Confirmed Count" Keyboard="Numeric" Text="{Binding Svp.ConfirmedMissingCasesCount, Mode=TwoWay}" />
+                    <Entry x:Name="ConfirmedMissingCasesCountEntry" Placeholder="Confirmed Count" Keyboard="Numeric" Text="{Binding Svp.ConfirmedMissingCasesCount, Mode=OneWayToSource}" />
 
                     <Label x:Name="ConfirmedSchoolDropoutsCountLabel" Text="Confirmed School Dropouts Count:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                    <Entry x:Name="ConfirmedSchoolDropoutsCountEntry" Placeholder="Confirmed Count" Keyboard="Numeric" Text="{Binding Svp.ConfirmedSchoolDropoutsCount, Mode=TwoWay}" />
+                    <Entry x:Name="ConfirmedSchoolDropoutsCountEntry" Placeholder="Confirmed Count" Keyboard="Numeric" Text="{Binding Svp.ConfirmedSchoolDropoutsCount, Mode=OneWayToSource}" />
 
                     <Label x:Name="NeighbouringTrafficProneDescLabel" Text="Neighbouring Traffic Prone Desc:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                    <Editor x:Name="NeighbouringTrafficProneDescEntry" Text="{Binding Svp.NeighbouringTrafficProneDesc, Mode=TwoWay}"/>
+                    <Editor x:Name="NeighbouringTrafficProneDescEntry" Text="{Binding Svp.NeighbouringTrafficProneDesc, Mode=OneWayToSource}"/>
 
                     <Label x:Name="MothersParticipationCountLabel" Text="Mothers Participation Count:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                    <Entry x:Name="MothersParticipationCountEntry" Placeholder="Count" Keyboard="Numeric" Text="{Binding Svp.MothersParticipationCount, Mode=TwoWay}" />
+                    <Entry x:Name="MothersParticipationCountEntry" Placeholder="Count" Keyboard="Numeric" Text="{Binding Svp.MothersParticipationCount, Mode=OneWayToSource}" />
 
                     <Label x:Name="FathersParticipationCountLabel" Text="Fathers Participation Count:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                    <Entry x:Name="FathersParticipationCountEntry" Placeholder="Count" Keyboard="Numeric" Text="{Binding Svp.FathersParticipationCount, Mode=TwoWay}" />
+                    <Entry x:Name="FathersParticipationCountEntry" Placeholder="Count" Keyboard="Numeric" Text="{Binding Svp.FathersParticipationCount, Mode=OneWayToSource}" />
 
                     <Label x:Name="SchoolParticipationCountLabel" Text="School Participation Count:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                    <Entry x:Name="SchoolParticipationCountEntry" Placeholder="Count" Keyboard="Numeric" Text="{Binding Svp.SchoolParticipationCount, Mode=TwoWay}" />
+                    <Entry x:Name="SchoolParticipationCountEntry" Placeholder="Count" Keyboard="Numeric" Text="{Binding Svp.SchoolParticipationCount, Mode=OneWayToSource}" />
 
                     <Label x:Name="EldersParticipationCountLabel" Text="Elders Participation Count:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                    <Entry x:Name="EldersParticipationCountEntry" Placeholder="Count" Keyboard="Numeric" Text="{Binding Svp.EldersParticipationCount, Mode=TwoWay}" />
+                    <Entry x:Name="EldersParticipationCountEntry" Placeholder="Count" Keyboard="Numeric" Text="{Binding Svp.EldersParticipationCount, Mode=OneWayToSource}" />
 
                     <Label x:Name="MovieParticipationCountLabel" Text="Movie Participation Count:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                    <Entry x:Name="MovieParticipationCountEntry" Placeholder="Count" Keyboard="Numeric" Text="{Binding Svp.MovieParticipationCount, Mode=TwoWay}" />
-
-                    <Label x:Name="TotalParticipationCountLabel" Text="Total Participation Count:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                    <Entry x:Name="TotalParticipationCountEntry" Placeholder="Count" Keyboard="Numeric" Text="{Binding Svp.TotalParticipationCount, Mode=TwoWay}" />
-                    
+                    <Entry x:Name="MovieParticipationCountEntry" Placeholder="Count" Keyboard="Numeric" Text="{Binding Svp.MovieParticipationCount, Mode=OneWayToSource}" />
+ 
                     <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
                         <Button x:Name="ResetButton1" Text="Reset" Clicked="OnResetClicked" />
                         <Button x:Name="NextPage" Text="Next Page" Clicked="OnClickChangeTab" />
@@ -95,10 +89,10 @@
                     <Entry x:Name="SchoolNameEntry" Placeholder="School Name" Text="{Binding Svp.SchoolName, Mode=TwoWay}" />
 
                     <Label x:Name="ComicBooksCountLabel" Text="Comic Books Count :" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                    <Entry x:Name="ComicBooksCountEntry" Placeholder="Count" Keyboard="Numeric" Text="{Binding Svp.ComicBooksCount, Mode=TwoWay}" />
+                    <Entry x:Name="ComicBooksCountEntry" Placeholder="Count" Keyboard="Numeric" Text="{Binding Svp.ComicBooksCount, Mode=OneWayToSource}" />
 
                     <Label x:Name="TotalSvpCostLabel" Text="Total Svp Cost :" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                    <Entry x:Name="TotalSvpCostEntry" Placeholder="Cost" Keyboard="Numeric" Text="{Binding Svp.TotalSvpCost, Mode=TwoWay}" />
+                    <Entry x:Name="TotalSvpCostEntry" Placeholder="Cost" Keyboard="Numeric" Text="{Binding Svp.TotalSvpCost, Mode=OneWayToSource}" />
 
                     <Label x:Name="ElderNameLabel" Text="Village Elder Name:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
                     <Entry x:Name="ElderNameEntry" Placeholder="Name"  Text="{Binding Svp.ElderName, Mode=TwoWay}" />
