--- a/NexGenRedAlert/NexGenRedAlert/Views/MenuPage.xaml
+++ b/NexGenRedAlert/NexGenRedAlert/Views/MenuPage.xaml
@@ -5,15 +5,23 @@
              NavigationPage.HasBackButton="False">
     <ContentPage.Content>
         <StackLayout x:Name="MainLayout">
-            <StackLayout x:Name="WelcomeStack" VerticalOptions="FillAndExpand" HorizontalOptions="Center" Margin="0,20,0,0">
-                <Label x:Name="UserNameLabel" Text="{Binding WelcomeMessage}" FontSize="22" TextColor="{StaticResource PrimaryDark}" />
+            <StackLayout x:Name="MenuLogoLayout" 
+                         BackgroundColor="{StaticResource LightGrey}"
+                         VerticalOptions="Fill" HorizontalOptions="Fill" >
+                <Image Source="RedAlertLogo.png" HorizontalOptions="FillAndExpand" HeightRequest="100" VerticalOptions="Start" Margin="20,10,0,10" />
             </StackLayout>
-            
+            <StackLayout x:Name="WelcomeStack" VerticalOptions="FillAndExpand" HorizontalOptions="Center" Margin="0,20,0,0">
+                <Label x:Name="UserNameLabel" Text="{Binding WelcomeMessage}" FontSize="22" TextColor="{StaticResource Black}" />
+            </StackLayout>
+
             <StackLayout VerticalOptions="StartAndExpand" Margin="20,0,20,0" >
                 <ActivityIndicator x:Name="activityIndicator" IsRunning="True" Color="Crimson"/>
                 <Button x:Name="preSvpButton" Text="Pre-Svp Form" Clicked="OpenPreSvpPage" />
                 <Button x:Name="SvpButton" Text="Svp Form" Clicked="OpenPostSvpPage" />
-                <Button x:Name="LogoutButton" Text="Logout" Command="{Binding LogoutCurrentUser }" />
+                <Button x:Name="LogoutButton" Text="Logout" Command="{Binding LogoutCurrentUser }" HeightRequest="50" BackgroundColor="Black" TextColor="White" />
+            </StackLayout>
+            <StackLayout x:Name="FooterStackLayout" HorizontalOptions="FillAndExpand" BackgroundColor="{StaticResource Primary}">
+                <Label x:Name="FooterLabel" Text="MyChoices Foundation Initiative" HorizontalOptions="Center" TextColor="White" />
             </StackLayout>
         </StackLayout>
     </ContentPage.Content>
