--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/primary_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/primary_case.component.html
@@ -9,13 +9,20 @@
                 </div>
                 <div class="card-block">
                     <div class="form-group">
+                        <label for="CaseStartDate">Case Start Date *</label>
+                        <my-date-picker name="CaseStartDate" id="CaseStartDate" [options]="myDatePickerOptions" formControlName="CaseStartDate"></my-date-picker>
+                        <div>
+                            <small *ngIf="casePrimaryForm.controls.CaseStartDate.hasError('required') && casePrimaryForm.controls.CaseStartDate.touched" class="mat-text-warn">Date is required.</small>
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <label for="CenterId">Center *</label>
                         <ng-select [options]="centerOptionList"
-                                    placeholder="Select Center"
-                                    formControlName="CenterId"
-                                    (selected)="onCenterSelected($event)"
-                                    (deselected)="onCenterDeselected()"
-                                    [allowClear]="true">
+                                   placeholder="Select Center"
+                                   formControlName="CenterId"
+                                   (selected)="onCenterSelected($event)"
+                                   (deselected)="onCenterDeselected()"
+                                   [allowClear]="true">
                         </ng-select>
                         <div>
                             <small *ngIf="casePrimaryForm.controls.CenterId.hasError('required') && casePrimaryForm.controls.CenterId.touched" class="mat-text-warn">Center is required.</small>
@@ -25,9 +32,9 @@
                     <div class="form-group">
                         <label for="PeaceMakerId">Peace Maker *</label>
                         <ng-select [options]="peaceMakerOptionsList"
-                                    placeholder="Select Peace Maker"
-                                    formControlName="PeaceMakerId"
-                                    [allowClear]="true">
+                                   placeholder="Select Peace Maker"
+                                   formControlName="PeaceMakerId"
+                                   [allowClear]="true">
                         </ng-select>
                         <div>
                             <small *ngIf="casePrimaryForm.controls.PeaceMakerId.hasError('required') && casePrimaryForm.controls.PeaceMakerId.touched" class="mat-text-warn">Peace Maker is required.</small>
@@ -37,9 +44,9 @@
                     <div class="form-group">
                         <label for="CounselorId">Counselor *</label>
                         <ng-select [options]="counselorOptionsList"
-                                    placeholder="Select Counselor"
-                                    formControlName="CounselorId"
-                                    [allowClear]="true">
+                                   placeholder="Select Counselor"
+                                   formControlName="CounselorId"
+                                   [allowClear]="true">
                         </ng-select>
                         <div>
                             <small *ngIf="casePrimaryForm.controls.CounselorId.hasError('required') && casePrimaryForm.controls.CounselorId.touched" class="mat-text-warn">Counselor is required.</small>
@@ -68,7 +75,7 @@
                         <input placeholder="First Name" formControlName="ClientFirstName" [(ngModel)]="caseBook.Case.ClientFirstName" class="form-control" />
                         <div>
                             <small *ngIf="casePrimaryForm.controls.ClientFirstName.hasError('required') && casePrimaryForm.controls.ClientFirstName.touched" class="mat-text-warn">First Name is required.</small>
-                            <small *ngIf="casePrimaryForm.controls.ClientFirstName.dirty && casePrimaryForm.controls.ClientFirstName.invalid" class="mat-text-warn">Please provide a valid First Name</small>                        
+                            <small *ngIf="casePrimaryForm.controls.ClientFirstName.dirty && casePrimaryForm.controls.ClientFirstName.invalid" class="mat-text-warn">Please provide a valid First Name</small>
                         </div>
                     </div>
 
@@ -77,15 +84,9 @@
                         <input placeholder="Last Name" formControlName="ClientLastName" [(ngModel)]="caseBook.Case.ClientLastName" class="form-control" />
                         <div>
                             <small *ngIf="casePrimaryForm.controls.ClientLastName.hasError('required') && casePrimaryForm.controls.ClientLastName.touched" class="mat-text-warn">Last Name is required.</small>
-                            <small *ngIf="casePrimaryForm.controls.ClientLastName.dirty && casePrimaryForm.controls.ClientLastName.invalid" class="mat-text-warn">Please provide a valid Last Name</small>                        
+                            <small *ngIf="casePrimaryForm.controls.ClientLastName.dirty && casePrimaryForm.controls.ClientLastName.invalid" class="mat-text-warn">Please provide a valid Last Name</small>
                         </div>
                     </div>
-
-                    <div class="form-group">
-                        <label for="Mi">M.I.</label>
-                        <input placeholder="Middle Initials" formControlName="Mi" [(ngModel)]="caseBook.Case.Mi" class="form-control" maxlength="2000" />
-                    </div>
-
                 </div>
             </div>
         </div>
@@ -96,6 +97,11 @@
                     Client Details
                 </div>
                 <div class="card-block">
+
+                    <div class="form-group">
+                        <label for="Mi">M.I.</label>
+                        <input placeholder="Middle Initials" formControlName="Mi" [(ngModel)]="caseBook.Case.Mi" class="form-control" maxlength="2000" />
+                    </div>
 
                     <div class="form-group">
                         <label for="FatherName">Father / Husband Name *</label>
@@ -112,15 +118,15 @@
                         <div>
                             <small *ngIf="casePrimaryForm.controls.MobileNumber.hasError('required') && casePrimaryForm.controls.MobileNumber.touched" class="mat-text-warn">Mobile is required.</small>
                             <small *ngIf="casePrimaryForm.controls.MobileNumber.dirty && casePrimaryForm.controls.MobileNumber.invalid" class="mat-text-warn">Please provide a valid mobile number</small>
-                       </div>
+                        </div>
                     </div>
 
                     <div class="form-group">
                         <label for="GenderLookupId">Gender *</label>
                         <ng-select [options]="genderLookupOptionsList"
-                                    placeholder="Select Gender"
-                                    formControlName="GenderLookupId"
-                                    [allowClear]="true">
+                                   placeholder="Select Gender"
+                                   formControlName="GenderLookupId"
+                                   [allowClear]="true">
                         </ng-select>
                         <div>
                             <small *ngIf="casePrimaryForm.controls.GenderLookupId.hasError('required') && casePrimaryForm.controls.GenderLookupId.touched" class="mat-text-warn">Gender is required.</small>
@@ -129,7 +135,7 @@
                     <div class="form-group">
                         <label for="ClientAge">Client Age *</label>
                         <div class="form-group" [class.has-danger]="casePrimaryForm.controls.ClientAge.invalid && casePrimaryForm.controls.ClientAge.touched">
-                            <input type="number" placeholder="Age" formControlName="ClientAge" class="form-control"/>
+                            <input type="number" placeholder="Age" formControlName="ClientAge" class="form-control" />
                             <div>
                                 <small *ngIf="casePrimaryForm.controls.ClientAge.hasError('required') && casePrimaryForm.controls.ClientAge.touched" class="mat-text-warn">Client age is required.</small>
                                 <small *ngIf="casePrimaryForm.controls.ClientAge.dirty && casePrimaryForm.controls.ClientAge.invalid" class="mat-text-warn">Please provide a valid age</small>
@@ -139,9 +145,9 @@
                     <div class="form-group">
                         <label for="MaritalStatusLookupId">Marital Status *</label>
                         <ng-select [options]="maritalStatusLookupOptionsList"
-                                    placeholder="Select Marital Status"
-                                    formControlName="MaritalStatusLookupId"
-                                    [allowClear]="true">
+                                   placeholder="Select Marital Status"
+                                   formControlName="MaritalStatusLookupId"
+                                   [allowClear]="true">
                         </ng-select>
                         <div>
                             <small *ngIf="casePrimaryForm.controls.MaritalStatusLookupId.hasError('required') && casePrimaryForm.controls.MaritalStatusLookupId.touched" class="mat-text-warn">Marital Status is required.</small>
@@ -151,9 +157,9 @@
                     <div class="form-group">
                         <label for="RequireAssistanceLookupId">Required Assistance *</label>
                         <ng-select [options]="requireAssistanceLookupOptionsList"
-                                    placeholder="Required Assistance"
-                                    formControlName="RequireAssistanceLookupId"
-                                    [allowClear]="true">
+                                   placeholder="Required Assistance"
+                                   formControlName="RequireAssistanceLookupId"
+                                   [allowClear]="true">
                         </ng-select>
                         <div>
                             <small *ngIf="casePrimaryForm.controls.RequireAssistanceLookupId.hasError('required') && casePrimaryForm.controls.RequireAssistanceLookupId.touched" class="mat-text-warn">Require Assistance is required.</small>
