--- a/NexGenRedAlert/NexGenRedAlert/Views/MenuPage.xaml
+++ b/NexGenRedAlert/NexGenRedAlert/Views/MenuPage.xaml
@@ -4,26 +4,38 @@
              x:Class="NexGenRedAlert.Views.MenuPage"
              NavigationPage.HasBackButton="False">
     <ContentPage.Content>
-        <StackLayout x:Name="MainLayout">
-            <StackLayout x:Name="MenuLogoLayout" 
-                         BackgroundColor="{StaticResource LightGrey}"
-                         VerticalOptions="Fill" HorizontalOptions="Fill" >
-                <Image Source="RedAlertLogo.png" HorizontalOptions="FillAndExpand" HeightRequest="100" VerticalOptions="Start" Margin="20,10,0,10" />
-            </StackLayout>
-            <StackLayout x:Name="WelcomeStack" VerticalOptions="FillAndExpand" HorizontalOptions="Center" Margin="0,20,0,0">
-                <Label x:Name="UserNameLabel" Text="{Binding WelcomeMessage}" FontSize="22" TextColor="{StaticResource Black}" />
-            </StackLayout>
+        <ScrollView>
+            <StackLayout x:Name="MainLayout">
+                <StackLayout x:Name="MenuLogoLayout" 
+                             BackgroundColor="{StaticResource LightGrey}"
+                             VerticalOptions="Fill" HorizontalOptions="Fill" >
+                    <Image Source="RedAlertLogo.png" HorizontalOptions="FillAndExpand" HeightRequest="100" VerticalOptions="Start" Margin="20,10,0,10" />
+                </StackLayout>
+                <StackLayout x:Name="WelcomeLayout" VerticalOptions="FillAndExpand" HorizontalOptions="Center" Margin="0,20,0,0">
+                    <Label x:Name="UserNameLabel" Text="{Binding WelcomeMessage}" FontSize="22" TextColor="{StaticResource Black}" />
+                </StackLayout>
 
-            <StackLayout VerticalOptions="StartAndExpand" Margin="20,0,20,0" >
-                <Button x:Name="planningButton" Text="Planning Form" Clicked="OpenPlanningFormPage" />
-                <Button x:Name="preSvpButton" Text="Pre-Svp Form" Clicked="OpenPreSvpFormPage" />
-                <Button x:Name="SvpButton" Text="Svp Form" Clicked="OpenSvpFormPage" />
-                <Button x:Name="RevisitButton" Text="Revisit Form" Clicked="OpenRevisitFormPage" />
-                <Button x:Name="LogoutButton" Text="Logout" Command="{Binding LogoutCurrentUser }" HeightRequest="50" BackgroundColor="Black" TextColor="White" />
+                <StackLayout x:Name="SVPFormsLayout" VerticalOptions="Start" Margin="20,0,20,0" IsVisible="{Binding IsSVPFormsLayoutVisible}">
+                    <Button x:Name="planningButton" Text="Planning Form" Clicked="OpenPlanningFormPage" />
+                    <Button x:Name="preSvpButton" Text="Pre-Svp Form" Clicked="OpenPreSvpFormPage" />
+                    <Button x:Name="SvpButton" Text="Svp Form" Clicked="OpenSvpFormPage" />
+                    <Button x:Name="RevisitButton" Text="Revisit Form" Clicked="OpenRevisitFormPage" />
+                </StackLayout>
+            
+                <StackLayout x:Name="QCFormsLayout" VerticalOptions="Start" Margin="20,0,20,0" IsVisible="{Binding IsQCFormsLayoutVisible}">
+                    <Button x:Name="PreSVPQCButton" Text="Pre-SVP QC Form" Clicked="OpenPlanningFormPage" />
+                    <Button x:Name="SvpQCButton" Text="Svp QC Form" Clicked="OpenPreSvpFormPage" />
+                    <Button x:Name="PostSvpQCButton" Text="Post Svp Form" Clicked="OpenSvpFormPage" />
+                </StackLayout>
+
+                <StackLayout x:Name="LogoutLayout" VerticalOptions="StartAndExpand"  Margin="20,0,20,0">
+                    <Button x:Name="LogoutButton" Text="Logout" Command="{Binding LogoutCurrentUser }" HeightRequest="50" BackgroundColor="Black" TextColor="White" />
+                </StackLayout>
+
+                <StackLayout x:Name="FooterStackLayout" HorizontalOptions="FillAndExpand" BackgroundColor="{StaticResource Primary}">
+                    <Label x:Name="FooterLabel" Text="MyChoices Foundation Initiative" HorizontalOptions="Center" TextColor="White" />
+                </StackLayout>
             </StackLayout>
-            <StackLayout x:Name="FooterStackLayout" HorizontalOptions="FillAndExpand" BackgroundColor="{StaticResource Primary}">
-                <Label x:Name="FooterLabel" Text="MyChoices Foundation Initiative" HorizontalOptions="Center" TextColor="White" />
-            </StackLayout>
-        </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
